--- a/pingoverso/frontend/index.html
+++ b/pingoverso/frontend/index.html
@@ -2,26 +2,110 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PingoVerso</title>
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
-    #container { width: 100%; height: 100%; position: relative; }
-    #chat, #register { position: absolute; background: white; z-index: 1; padding: 10px; border: 1px solid #ccc; }
-    #chat { bottom: 10px; right: 10px; width: 250px; height: 300px; display: flex; flex-direction: column; }
-    #messages { flex: 1; overflow-y: auto; border: 1px solid #ddd; padding: 5px; }
-    #inputMessage { padding: 5px; width: 100%; box-sizing: border-box; }
-    #register { top: 10px; left: 10px; display: flex; gap: 5px; }
+    html, body {
+      margin: 0; padding: 0; height: 100%; overflow: hidden;
+      font-family: Arial, sans-serif;
+      background: #a1d3ff;
+    }
+
+    #container {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      z-index: 0;
+    }
+
+    #register, #chat {
+      position: fixed;
+      background: white;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      z-index: 10;
+      display: flex;
+      gap: 5px;
+      align-items: center;
+    }
+
+    #register {
+      top: 10px;
+      left: 10px;
+    }
+
+    #register input {
+      padding: 6px 8px;
+      font-size: 14px;
+      border: 1px solid #aaa;
+      border-radius: 4px;
+    }
+
+    #register button {
+      padding: 6px 12px;
+      background-color: #007bff;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    #register button:hover {
+      background-color: #0056b3;
+    }
+
+    #status {
+      margin-left: 10px;
+      min-width: 100px;
+      font-weight: 600;
+      color: green;
+    }
+
+    #chat {
+      bottom: 10px;
+      right: 10px;
+      width: 280px;
+      height: 350px;
+      flex-direction: column;
+    }
+
+    #messages {
+      flex: 1;
+      overflow-y: auto;
+      border: 1px solid #ddd;
+      padding: 8px;
+      border-radius: 4px;
+      background: #fafafa;
+      font-size: 14px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    #inputMessage {
+      margin-top: 8px;
+      padding: 8px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 100%;
+      box-sizing: border-box;
+    }
   </style>
 </head>
 <body>
   <div id="container"></div>
+
   <div id="register">
     <input id="username" placeholder="Usuário" />
     <input id="password" placeholder="Senha" type="password" />
     <button id="btnRegister">Registrar</button>
     <span id="status"></span>
   </div>
+
   <div id="chat">
     <div id="messages"></div>
     <input id="inputMessage" placeholder="Digite mensagem..." />
@@ -35,8 +119,8 @@
     const messages = document.getElementById('messages');
     const input = document.getElementById('inputMessage');
     input.addEventListener('keydown', e => {
-      if (e.key === 'Enter' && input.value) {
-        socket.emit('sendMessage', input.value);
+      if (e.key === 'Enter' && input.value.trim()) {
+        socket.emit('sendMessage', input.value.trim());
         input.value = '';
       }
     });
@@ -49,23 +133,36 @@
 
     // Registro
     document.getElementById('btnRegister').onclick = async () => {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      if (!username || !password) {
+        document.getElementById('status').textContent = 'Preencha usuário e senha';
+        document.getElementById('status').style.color = 'red';
+        return;
+      }
       const res = await fetch('/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
       });
       const data = await res.json();
-      document.getElementById('status').textContent = data.success ? 'Registrado!' : data.error;
+      if (data.success) {
+        document.getElementById('status').textContent = 'Registrado!';
+        document.getElementById('status').style.color = 'green';
+      } else {
+        document.getElementById('status').textContent = data.error || 'Erro ao registrar';
+        document.getElementById('status').style.color = 'red';
+      }
     };
 
-    // Pinguim
+    // Three.js Pinguim
     const container = document.getElementById('container');
     const scene = new THREE.Scene();
+
     const camera = new THREE.PerspectiveCamera(75, container.clientWidth / container.clientHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(container.clientWidth, container.clientHeight);
+    renderer.setClearColor(0xa1d3ff);
     container.appendChild(renderer.domElement);
 
     const light = new THREE.DirectionalLight(0xffffff, 1);
@@ -73,24 +170,40 @@
     scene.add(light);
 
     const group = new THREE.Group();
-    const body = new THREE.Mesh(new THREE.SphereGeometry(1.5, 32, 32), new THREE.MeshStandardMaterial({color: 0x000000}));
+
+    const body = new THREE.Mesh(
+      new THREE.SphereGeometry(1.5, 32, 32),
+      new THREE.MeshStandardMaterial({ color: 0x000000 })
+    );
     group.add(body);
 
-    const belly = new THREE.Mesh(new THREE.CircleGeometry(1, 32), new THREE.MeshStandardMaterial({color: 0xffffff}));
+    const belly = new THREE.Mesh(
+      new THREE.CircleGeometry(1, 32),
+      new THREE.MeshStandardMaterial({ color: 0xffffff })
+    );
     belly.position.set(0, -0.2, 1.45);
     belly.rotation.x = -Math.PI / 2;
     group.add(belly);
 
-    const head = new THREE.Mesh(new THREE.SphereGeometry(0.8, 32, 32), new THREE.MeshStandardMaterial({color: 0x000000}));
+    const head = new THREE.Mesh(
+      new THREE.SphereGeometry(0.8, 32, 32),
+      new THREE.MeshStandardMaterial({ color: 0x000000 })
+    );
     head.position.set(0, 1.7, 0);
     group.add(head);
 
-    const face = new THREE.Mesh(new THREE.CircleGeometry(0.7, 32), new THREE.MeshStandardMaterial({color: 0xffffff}));
+    const face = new THREE.Mesh(
+      new THREE.CircleGeometry(0.7, 32),
+      new THREE.MeshStandardMaterial({ color: 0xffffff })
+    );
     face.position.set(0, 1.7, 0.7);
     face.rotation.x = -Math.PI / 2;
     group.add(face);
 
-    const eye = new THREE.Mesh(new THREE.CircleGeometry(0.15, 32), new THREE.MeshStandardMaterial({color: 0x000000}));
+    const eye = new THREE.Mesh(
+      new THREE.CircleGeometry(0.15, 32),
+      new THREE.MeshStandardMaterial({ color: 0x000000 })
+    );
     eye.position.set(-0.3, 1.85, 1.1);
     group.add(eye);
 
@@ -98,15 +211,20 @@
     eye2.position.x = 0.3;
     group.add(eye2);
 
-    const beak = new THREE.Mesh(new THREE.ConeGeometry(0.2, 0.5, 32), new THREE.MeshStandardMaterial({color: 0xffa500}));
+    const beak = new THREE.Mesh(
+      new THREE.ConeGeometry(0.2, 0.5, 32),
+      new THREE.MeshStandardMaterial({ color: 0xffa500 })
+    );
     beak.position.set(0, 1.55, 1.3);
     beak.rotation.x = Math.PI / 2;
     group.add(beak);
 
     scene.add(group);
+
     camera.position.set(0, 2, 7);
 
     let target = null;
+
     container.addEventListener('click', e => {
       const rect = container.getBoundingClientRect();
       const mouse = new THREE.Vector2(
@@ -121,6 +239,7 @@
 
     function animate() {
       requestAnimationFrame(animate);
+
       if (target) {
         group.position.lerp(target, 0.05);
         const dir = target.clone().sub(group.position);
@@ -131,9 +250,17 @@
           target = null;
         }
       }
+
       renderer.render(scene, camera);
     }
     animate();
+
+    // Ajuste o canvas no resize
+    window.addEventListener('resize', () => {
+      camera.aspect = container.clientWidth / container.clientHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(container.clientWidth, container.clientHeight);
+    });
   </script>
 </body>
 </html>
